Made work on Naive_bayes

--- a/Naive_Bayes.ipynb
+++ b/Naive_Bayes.ipynb
@@ -80,7 +80,26 @@
     "Now, we come to the part of how we train this model, which we unravel by asking the question: \"How do we find $p(x_i|y)$?\" \n",
     "\n",
     "\n",
-    "We get the answer to this based on the training data, assuming a certain distribution as to how the variables $x_1, x_2,\\dots, x_n$ for data points in a particular class $y_k$ are distributed. Here, I have assumed a normal distribution for the variables(which may not be the case, ```x_2``` is certainly a poisson distribution but since calculating pdf for Poisson was causing )"
+    "We get the answer to this based on the training data, assuming a certain distribution as to how the variables $x_1, x_2,\\dots, x_n$ for data points in a particular class $y_k$ are distributed. Here, I have assumed a normal distribution for the variables(which may not be the case, ```x_2``` is certainly a poisson distribution but since calculating pdf for Poisson was causing errors, I had to skip it)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ad0f2ac-05f7-4685-b3ea-564cc77127fd",
+   "metadata": {},
+   "source": [
+    "The Gaussian distribution takes the following form:\n",
+    "$$\n",
+    "p(X=x)=\\frac{1}{\\sqrt{2\\pi \\sigma^2}}\\exp\\big(-\\frac{(x-\\mu)^2}{2\\sigma^2}\\big)\n",
+    "$$\n",
+    "where $\\mu$ is the mean, $\\sigma^2$ is the variance, which we can directly find from the training data using the inbuilt statistical functions in numpy. What it essentially says that the probability of the random variable $X$ which is distributed normally, taking on the value $x$ is the above expression.\n",
+    "\n",
+    "Now, we were on a quest to find out $p(x_i|y)$? Well, we already have the answer staring at us.\n",
+    "\n",
+    "We were given classified data, in the form where $y$ was either 0 or 1. Thus, we could calculate the $\\mu$ and $\\sigma^2$ separately for the $x_i$ in which $y$ was 0 and in which $y$ was 1. And lo and behold, we got the components for calculating the $p(x_i|y)$ for each $x_i$ in each $y$. \n",
+    "\n",
+    "\n",
+    "Now, the only task is to calculate the $\\log(N)$'s and compare. Which means, we are just left with implementing the model."
    ]
   },
   {
@@ -93,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "8800c1fb-8216-4aad-ad8f-879032623303",
    "metadata": {
     "tags": []
@@ -105,20 +124,23 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "\n",
+    "\n",
     "df=pd.read_csv('data/ds1_train.csv')\n",
     "df1=pd.read_csv('data/ds1_test.csv')\n",
     "\n",
-    "X=df.drop(columns=[\"y\"]).to_numpy()\n",
-    "y=df.drop(columns=[\"x_1\",\"x_2\"]).to_numpy().flatten()\n",
+    "#Training data\n",
+    "X0=df.drop(columns=[\"y\"]).to_numpy()\n",
+    "y0=df.drop(columns=[\"x_1\",\"x_2\"]).to_numpy().flatten()\n",
     "\n",
-    "\n",
+    "#Testing data\n",
     "X1=df1.drop(columns=[\"y\"]).to_numpy()\n",
     "y1=df1.drop(columns=[\"x_1\",\"x_2\"]).to_numpy().flatten()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "a39b56a6-907d-4355-a650-d2a0598fc1ce",
    "metadata": {
     "tags": []
@@ -127,10 +149,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7ff39f2dd930>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f35ca2b1030>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -238,19 +260,19 @@
     "            #Return the posterior with the highest probability\n",
     "        return self._classes[np.argmax(posteriors)]\n",
     "``` \n",
-    "    "
+    "End of the cell"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "id": "e9daf5ec-d309-46ee-8ffb-c3332c8d64d8",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "\n",
+    "#Actually functioning code\n",
     "class NaiveBayes():\n",
     "    # init function not required\n",
     "\n",
@@ -297,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "b9c898ca-202d-40d3-b30f-0ebfaa9ab338",
    "metadata": {
     "tags": []
@@ -307,7 +329,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.83\n"
+      "Accuracy:  0.83\n",
+      "Confusion Matrix: \n",
+      " [[38  5]\n",
+      " [12 45]]\n"
      ]
     }
    ],
@@ -321,10 +346,106 @@
     "    \n",
     "    \n",
     "nb = NaiveBayes()\n",
-    "nb.fit(X, y)\n",
-    "predictions = nb.predict(X1)\n",
+    "nb.fit(X0, y0)\n",
+    "y_pred = nb.predict(X1)\n",
     "\n",
-    "print(accuracy(y1, predictions))"
+    "acc = accuracy(y_pred, y1)\n",
+    "print(\"Accuracy: \", acc)\n",
+    "print(\"Confusion Matrix: \\n\", confusion_matrix(y_pred, y1))\n",
+    "#An unusuaal number of false positives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "768bd6a8-d32e-4093-a6f0-7f12cbf2f94b",
+   "metadata": {},
+   "source": [
+    "## Hyperparamter tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4a2ca1b-c56f-4a07-99ce-17c3d525782f",
+   "metadata": {},
+   "source": [
+    "For Naive Bayes as such, there aren't any hyperparameters I can see (no learning rate, number of iterations etc.) and so I think there isn't anything to do there, except perhaps to use a different distribution for the random variables we use?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac25e9c9-9920-4916-8f0a-2177724b5d35",
+   "metadata": {},
+   "source": [
+    "## Scikit-Learn implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3c13e742-8b3c-43cb-9d6b-a9876d7d936e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>GaussianNB()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">GaussianNB</label><div class=\"sk-toggleable__content\"><pre>GaussianNB()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "GaussianNB()"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "model= GaussianNB()\n",
+    "model.fit(X0, y0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "574d420f-f4f4-492b-8dfb-5fb3012a5f8c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.83\n",
+      "Confusion Matrix: \n",
+      " [[38  5]\n",
+      " [12 45]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred_scikit=model.predict(X1)\n",
+    "acc = accuracy(y_pred_scikit, y1)\n",
+    "print(\"Accuracy: \", acc)\n",
+    "print(\"Confusion Matrix: \\n\", confusion_matrix(y_pred_scikit, y1))\n",
+    "#An unusuaal number of false positives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "321bd1b6-5d25-4090-8ade-86e3e1a7cd77",
+   "metadata": {},
+   "source": [
+    "#### **Vanilla implementation's accuracy**: $83\\%$\n",
+    "\n",
+    "#### **Scikit-Learn pre-built's accuracy**: $83\\%$\n",
+    "\n",
+    "This was kind of expected since we both would have used the same Gaussian implementation to get to the same curve, when one of the variables clearly wasn't normally distributed"
    ]
   }
  ],
