--- a/Logistic_Regression.ipynb
+++ b/Logistic_Regression.ipynb
@@ -164,100 +164,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "9d89c6e7-2934-41b1-b966-87e238f61401",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>x_1</th>\n",
-       "      <th>x_2</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2.911809</td>\n",
-       "      <td>60.359613</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3.774746</td>\n",
-       "      <td>344.149284</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2.615488</td>\n",
-       "      <td>178.222087</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2.013694</td>\n",
-       "      <td>15.259472</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2.757625</td>\n",
-       "      <td>66.194174</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        x_1         x_2    y\n",
-       "0  2.911809   60.359613  0.0\n",
-       "1  3.774746  344.149284  0.0\n",
-       "2  2.615488  178.222087  0.0\n",
-       "3  2.013694   15.259472  0.0\n",
-       "4  2.757625   66.194174  0.0"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Definitions\n",
     "import numpy as np\n",
     "from numpy import log,dot,e,shape\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "\n",
-    "df=pd.read_csv('data/ds1_train.csv')\n"
+    "from sklearn.metrics import confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 22,
    "id": "58568a90-db52-4809-b802-8baf3887eaf5",
    "metadata": {
     "tags": []
@@ -268,7 +192,7 @@
     "    return (1+e**(-x))**(-1)\n",
     "\n",
     "\n",
-    "class LogisticRegression():\n",
+    "class Logistic_Regression():\n",
     "    def __init__(self, lr=0.01, n_iters=1000000):\n",
     "        self.lr=lr\n",
     "        self.n_iters = n_iters\n",
@@ -293,7 +217,6 @@
     "            \n",
     "           \n",
     "    def predict(self, X):\n",
-    "        print(self.weights)\n",
     "        linear_pred = np.dot(X, self.weights)+ self.bias\n",
     "        y_pred = sigmoid(linear_pred)\n",
     "        class_pred=[]\n",
@@ -308,35 +231,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 23,
    "id": "ec8e3e42-2b05-4139-af38-890c5ce742a7",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "clf = LogisticRegression()\n",
+    "clf = Logistic_Regression()\n",
+    "#Training data\n",
+    "df=pd.read_csv('data/ds1_train.csv')\n",
     "X_0=df.drop(columns=[\"y\"])\n",
-    "y_0=df.drop(columns=[\"x_1\", \"x_2\"])\n",
-    "X=X_0.to_numpy()\n",
-    "y=y_0.to_numpy().flatten()"
+    "y_0=df[\"y\"]\n",
+    "X0=X_0.to_numpy()\n",
+    "y0=y_0.to_numpy().flatten()\n",
+    "\n",
+    "#Testing data\n",
+    "df1=pd.read_csv('data/ds1_test.csv')\n",
+    "X_0=df1.drop(columns=[\"y\"])\n",
+    "y_0=df1[\"y\"]\n",
+    "X1=X_0.to_numpy()\n",
+    "y1=y_0.to_numpy().flatten()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
-   "id": "7f53f60f-318f-43c6-9859-00b8faf8e3a1",
+   "execution_count": 24,
+   "id": "48d9f010-e8a2-43dc-b915-5e63042b9714",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "clf.fit(X,y)"
+    "clf.fit(X0, y0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 25,
    "id": "4b9bbd99-b172-4e0b-9cf7-6999b9277753",
    "metadata": {
     "tags": []
@@ -346,27 +278,109 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 8.00338285 -0.05892104]\n",
-      "0.82\n"
+      "Accuracy:  0.82\n",
+      "Confusion Matrix: \n",
+      " [[34  2]\n",
+      " [16 48]]\n"
      ]
     }
    ],
    "source": [
-    "# Testing data\n",
-    "df1=pd.read_csv('data/ds1_test.csv')\n",
-    "X_0=df1.drop(columns=[\"y\"])\n",
-    "y_0=df1.drop(columns=[\"x_1\", \"x_2\"])\n",
-    "X1=X_0.to_numpy()\n",
-    "y1=y_0.to_numpy().flatten()\n",
-    "\n",
     "y_pred=clf.predict(X1)\n",
-    "\n",
     "\n",
     "def accuracy(y_pred, y_test):\n",
     "    return np.sum(y_pred==y_test)/len(y_test)\n",
     "\n",
     "acc = accuracy(y_pred, y1)\n",
-    "print(acc)"
+    "print(\"Accuracy: \", acc)\n",
+    "print(\"Confusion Matrix: \\n\", confusion_matrix(y_pred, y1))\n",
+    "#An unusuaal number of false positives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4aa9e20b-60b2-4b08-a77c-de4d253984f2",
+   "metadata": {},
+   "source": [
+    "## Scikit-learn implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8ee09f25-cdd3-4565-9516-e70647d682a5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-4 {color: black;background-color: white;}#sk-container-id-4 pre{padding: 0;}#sk-container-id-4 div.sk-toggleable {background-color: white;}#sk-container-id-4 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-4 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-4 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-4 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-4 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-4 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-4 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-4 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-4 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-4 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-4 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-4 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-4 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-4 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-4 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-4 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-4 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-4 div.sk-item {position: relative;z-index: 1;}#sk-container-id-4 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-4 div.sk-item::before, #sk-container-id-4 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-4 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-4 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-4 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-4 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-4 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-4 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-4 div.sk-label-container {text-align: center;}#sk-container-id-4 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-4 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-4\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" checked><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_0,y_0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "1645bc8a-93e8-4c51-9b7c-2523f088cdef",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.9\n",
+      "Confusion Matrix: \n",
+      " [[43  3]\n",
+      " [ 7 47]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ssheersh/miniconda3/lib/python3.10/site-packages/sklearn/base.py:409: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred_scikit=model.predict(X1)\n",
+    "acc = accuracy(y_pred_scikit, y1)\n",
+    "print(\"Accuracy: \", acc)\n",
+    "print(\"Confusion Matrix: \\n\", confusion_matrix(y_pred_scikit, y1))\n",
+    "#An unusuaal number of false positives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39284847-6d13-4475-bf61-f51c869b234e",
+   "metadata": {},
+   "source": [
+    "#### **Vanilla implementation's accuracy**: $82\\%$\n",
+    "\n",
+    "#### **Scikit-Learn pre-built's accuracy**: $90\\%$\n",
+    "\n",
+    "So the Scikit-Learn is fairly more accurate,"
    ]
   }
  ],
